k8-deploy.yaml
#creates Replicaset
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 164910480407.dkr.ecr.us-east-1.amazonaws.com/user:0.0.7
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 8080          # port no that your service has to listern and this is the port you will access
      targetPort: 8080  # Target port forwards the request to the backebd pod


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
spec:
  rules:
  - host: robot-frontend.b54-roboshop.in
    http:
      paths:
      - path: "/api/user/"
        pathType: Prefix
        backend: 
          service:
            name: user-svc
            port:
              number: 8080
  ingressClassName: nginx
